<?xml version="1.0"?>
<package format="2">
  <name>common</name>
  <version>0.0.0</version>
  <description>The common package</description>
  <maintainer email="s.elmotamed96@gmail.com">Salem Elmotamed</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
