<?xml version="1.0"?>
<package format="2">
  <name>global</name>
  <version>0.0.0</version>
  <description>The global package</description>
  <maintainer email="s.elmotamed96@gmail.com">Salem Elmotamed</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>rplidar_ros</build_depend>
  <build_export_depend>rplidar_ros</build_export_depend>
  <exec_depend>rplidar_ros</exec_depend>

  <build_depend>rosbridge_server</build_depend>
  <build_export_depend>rosbridge_server</build_export_depend>
  <exec_depend>rosbridge_server</exec_depend>
  

  <export>
  </export>
</package>
