<?xml version="1.0"?>
<package format="2">
  <name>touch_interactive</name>
  <version>0.0.0</version>
  <description>The touch_interactive package</description>
  <maintainer email="s.elmotamed96@gmail.com">Salem Elmotamed</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <export>
  </export>
</package>
